[package]
name = "pytest-infuse"
version = "0.1.0"
edition = "2024"
description = "Rust-powered pytest collection: drive test discovery and ordering from a fast native binary"
license = "MIT"
repository = "https://github.com/narven/pytest-infuse"
homepage = "https://github.com/narven/pytest-infuse"
documentation = "https://github.com/narven/pytest-infuse#readme"
keywords = ["pytest", "testing", "test-discovery", "rust"]
categories = ["development-tools::testing"]
readme = "README.md"
rust-version = "1.85.0"

[[bin]]
name = "infuse"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[profile.release]
strip = "symbols"
